[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Enemy Ship2.png" type="Texture" id=1]
[ext_resource path="res://Sfx/sfx_zapsplat_metal_hit2.wav" type="AudioStream" id=2]
[ext_resource path="res://Scenes/Misc/HitSfx.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Misc/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Objects/Enemy Bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Misc/BlinkAnimation.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sfx/sfx_zapsplat_metal_hit1.wav" type="AudioStream" id=7]
[ext_resource path="res://Resources/blink_shader.tres" type="Material" id=8]
[ext_resource path="res://Scripts/Enemy2.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Damage.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.65259, 4.10138 )

[sub_resource type="Animation" id=2]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Enemy" type="Node2D"]
rotation = 6.28318
scale = Vector2( 2, 2 )
script = ExtResource( 9 )
bullet_scene = ExtResource( 5 )
number_of_bullets = 10
is_random = true
spawn_rate = 0.3
bullet_speed = 0.4
var1 = ExtResource( 7 )
var2 = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 8 )
rotation = -9.42476
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
rotation = -3.14159
collision_layer = 2
collision_mask = 2147483652
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 50

[node name="BlinkAnimation" parent="." instance=ExtResource( 6 )]
anims/stop = SubResource( 2 )

[node name="HitSfx" parent="." instance=ExtResource( 3 )]

[connection signal="area_entered" from="Hitbox" to="." method="hitbox_activated"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="no_health" from="Stats" to="." method="no_health"]
[connection signal="animation_finished" from="BlinkAnimation" to="." method="blink_finished"]
